# TrajectoryOptimizeMethod

./: CMakeLists.txt  README.md  main.cpp
include/: base_teb_edges.h  edge_obstacle_edge.h  edge_via_point.h  planner_manager.h  tools.h  vertexPoint.h
matplotlib-cpp/: matplotlibcpp.h
src/: planner_manager.cpp
